--- a/index.html
+++ b/index.html
@@ -14,11 +14,26 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Make your list</h1>
-    <input type="text" id="task" class="input" autocomplete="off" required />
-    <label for="task">Enter Task</label>
-    <button class="add">Add</button>
-    <div class="section"></div>
+    <div class="container">
+      <h1>Make your list</h1>
+      <div class="form">
+        <form>
+          <input
+            type="text"
+            id="task"
+            class="input"
+            autocomplete="off"
+            placeholder="Enter Task"
+            required
+          />
+          <button type="submit" class="add">Add Task</button>
+        </form>
+      </div>
+      <div id="error-message"></div>
+
+      <div class="section"></div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
