--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Make your list</h1>
+      <h1>Make Your List</h1>
       <div class="form">
         <form>
           <input
